@@ -9,6 +9,11 @@ version 2.0-rc0 XX-Feb-2012
 . [NEW] Director: When the stats are on, the number of GL draw calls per frame are displayed
 . [NEW] LabelTTF: fontName and fontSize are properties
 . [NEW] LabelBMFont: added setFntFile method
+. [NEW] Menu: could be created/initialized using NSArray
+			Menu could be created without items
+			Menu could be enabled/disabled (no events will be accepted when it is disabled)
+			It is possible to change its priority on runtime
+			kCCMenuTouchPriority -> kCCMenuHandlerPriority
 . [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
 . [NEW] TextureAtlas: Added option to not use VAO (might be a bit slower, but it consumes less memory)
 . [NEW] TileMap: polygon, polilines and gid are parsed from the objects (issue #1311)
